--- a/style.css
+++ b/style.css
@@ -26,8 +26,12 @@ h2 {
     height: 10rem;
 }
 
-.img-container {
+.team-header {
+    color: #ffffff;
+    text-align: center;
+}
 
+.img-container {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
