--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body {
     background-color: rgb(41, 41, 48);
     display: flex;
     justify-content: space-between;
+    padding-left: 10px;
 }
 
 h1 {
